--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,11 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+              <groupId>dev.morphia.morphia</groupId>
+              <artifactId>core</artifactId>
+              <version>1.5.7</version>
+        </dependency>
+    </dependencies>
 </project>
